hphp/hack/test/sound_dynamic/typing/generic_constraint_dynamic.bad.php.legacy_decl.exp
File "generic_constraint_dynamic.bad.php", line 19, characters 12-12:
Some type arguments violate their constraints (Typing[4323])
  File "generic_constraint_dynamic.bad.php", line 5, characters 9-9:
  `T` is a constrained type parameter
  File "generic_constraint_dynamic.bad.php", line 5, characters 14-20:
  This type constraint is violated
  File "generic_constraint_dynamic.bad.php", line 5, characters 14-20:
  Expected `dynamic`
  File "generic_constraint_dynamic.bad.php", line 19, characters 14-14:
  But got `D`
File "generic_constraint_dynamic.bad.php", line 20, characters 8-11:
Some type arguments violate their constraints (Typing[4323])
  File "generic_constraint_dynamic.bad.php", line 12, characters 15-15:
  `T` is a constrained type parameter
  File "generic_constraint_dynamic.bad.php", line 12, characters 20-26:
  This type constraint is violated
  File "generic_constraint_dynamic.bad.php", line 12, characters 20-26:
  Expected `dynamic`
  File "generic_constraint_dynamic.bad.php", line 20, characters 13-13:
  But got `D`
File "generic_constraint_dynamic.bad.php", line 21, characters 14-20:
Invalid argument (Typing[4323])
  File "generic_constraint_dynamic.bad.php", line 5, characters 9-9:
  `T` is a constrained type parameter
  File "generic_constraint_dynamic.bad.php", line 5, characters 14-20:
  This type constraint is violated
  File "generic_constraint_dynamic.bad.php", line 5, characters 14-20:
  Expected `dynamic`
  File "generic_constraint_dynamic.bad.php", line 21, characters 18-18:
  But got `D`
File "generic_constraint_dynamic.bad.php", line 22, characters 13-19:
Invalid argument (Typing[4323])
  File "generic_constraint_dynamic.bad.php", line 12, characters 15-15:
  `T` is a constrained type parameter
  File "generic_constraint_dynamic.bad.php", line 12, characters 20-26:
  This type constraint is violated
  File "generic_constraint_dynamic.bad.php", line 12, characters 20-26:
  Expected `dynamic`
  File "generic_constraint_dynamic.bad.php", line 22, characters 17-17:
  But got `D`
